# pdarena

./: LICENSE  README.md
backend/: Cargo.toml  aarch64-build.sh  aarch64-run.sh  loadcsv.py  run.sh
backend/sql/: 1-pdarena.sql  2-mock-data.sql
backend/src/: api.rs  article_data_service.rs  article_section_service.rs  article_service.rs  db_types.rs  handlers.rs  judge0.rs  main.rs  match_resolution_service.rs  matchup_service.rs  request.rs  response.rs  run_code.rs  submission_service.rs  testcase_data_service.rs  tournament_data_service.rs  tournament_service.rs  tournament_submission_service.rs  utils.rs
web-frontend/: package-lock.json  package.json
web-frontend/public/: index.html
web-frontend/src/: App.tsx  react-app-env.d.ts  setupProxy.js
web-frontend/src/components/: ArchiveTournamentSubmission.tsx  CreateTournament.tsx  CreateTournamentSubmission.tsx  CreateVerifySubmission.tsx  CrossTable.tsx  DashboardLayout.tsx  EditTournamentSubmission.tsx  ErrorBoundary.tsx  ExternalLayout.tsx  ManageMatchResolution.tsx  ManageSubmission.tsx  ManageTournamentData.tsx  ManageTournamentSubmission.tsx  ManageTournamentSubmissionTournament.tsx  ManageTournamentSubmissions.tsx  PythonEditor.tsx  SubmitTournamentSubmission.tsx  ViewData.tsx
web-frontend/src/pages/: Account.tsx  ArticleSearch.tsx  ArticleView.tsx  Compete.tsx  Dashboard.tsx  Help.tsx  Home.tsx  ViewMatchResolution.tsx  ViewSubmission.tsx  ViewTournament.tsx  ViewTournamentSubmission.tsx
web-frontend/src/utils/: api.ts  scoring.ts
