[package]
name = "pdarena-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.23.1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio-postgres = "0.7.7"
strum = { version = "0.24.1", features = ["derive"] }

auth-service-api = {version = "*", git = "https://github.com/innexgo/auth-service-api" }
reqwest = "0.11.13"
rand = "0.8.5"
base64 = "0.20.0"
tar = "0.4.38"
deadpool-postgres = "0.10.3"
futures-util = "0.3.25"
