[package]
name = "pdarena-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio-postgres = "0.7.10"
strum = { version = "0.25.0", features = ["derive"] }

auth-service-api = {version = "*", git = "https://github.com/innexgo/auth-service-api" }
reqwest = "0.11.22"
rand = "0.8.5"
base64 = "0.21.4"
tar = "0.4.40"
deadpool-postgres = "0.11.0"
futures-util = "0.3.28"
